# OpenEnv_Tabular_DataCleaner

./: .gitignore  Dockerfile  ManualThingsToDoCody.md  README.md  TeamSyncSummary.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  test_pipeline.py
server/: app.py  environment.py  main.py  models.py  utils.py
server/datasets/: task_easy_gold.csv  task_easy_raw.csv  task_extreme_gold.csv  task_extreme_raw.csv  task_hard_gold.csv  task_hard_raw.csv  task_medium_gold.csv  task_medium_raw.csv
server/static/: index.html
