[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tabular-openenv"
version = "1.0.0"
description = "A tabular data cleaning OpenEnv for the Meta PyTorch Hackathon."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.2",
    "pandas>=2.1.3",
    "httpx>=0.25.1",
    "openai>=1.3.5",
    "openenv-core>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
server = "server.app:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]
